--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.ts"
+    "serve": "nodemon index.ts",
+    "build": "tsc -p .",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.11.23",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.4",
-    "ts-node": "^10.9.2"
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.23",
+    "ts-node": "^10.9.2",
+    "tsc": "^2.0.4",
+    "tsc-watch": "^6.0.4",
+    "typescript": "^5.3.3"
   }
 }
